로그인 // 회원가입 DB 적용 완료 세션 관리 시작

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@styled-system/theme-get": "^5.1.2",
     "apollo-server-express": "^2.24.0",
     "apollo-server-micro": "^2.24.0",
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "cookie": "^0.4.1",
@@ -66,6 +67,7 @@
     "react-waypoint": "^9.0.3",
     "reflect-metadata": "^0.1.13",
     "resize-observer-polyfill": "^1.5.1",
+    "side-effect": "^0.2.0",
     "styled-components": "^5.2.3",
     "styled-system": "^5.1.5",
     "stylis-plugin-rtl": "1.1.0",
